welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:2: error: not found: value setpos
  setpos(4,1)
  ^